--- a/15_minutes_to_QCoDeS.ipynb
+++ b/15_minutes_to_QCoDeS.ipynb
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspecting the station\n",
+    "-### Inspecting the station\n",
     "\n",
     "For any experiment it is essential to have a record of the instrumental setup. To enable this, a `Station` has a `snapshot` method which provides a dictionary of its `Instruments` and their properties (e.g. `Parameters`) in a recursive manner.\n",
     "\n",
