--- a/15_minutes_to_QCoDeS.ipynb
+++ b/15_minutes_to_QCoDeS.ipynb
@@ -78,8 +78,7 @@
     "from qcodes.dataset.plotting import plot_dataset\n",
     "\n",
     "## Using interactive widget\n",
-    "from qcodes.interactive_widget import experiments_widget\n",
-    "\n"
+    "from qcodes.interactive_widget import experiments_widget"
    ]
   },
   {
