trying to figure out how to get GPIB to work

--- a/Initialization_Guide-Copy1.ipynb
+++ b/Initialization_Guide-Copy1.ipynb
@@ -25,14 +25,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikolai/miniconda3/envs/qcodes/lib/python3.9/site-packages/gpib_ctypes/gpib/gpib.py:54: UserWarning: GPIB library not found. Please manually load it using _load_lib(filename). All GPIB functions will raise OSError until the library is manually loaded.\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -42,6 +34,9 @@
     }
    ],
    "source": [
+    "#from gpib_ctypes import make_default_gpib\n",
+    "#make_default_gpib()\n",
+    "\n",
     "# importing packages\n",
     "import numpy as np\n",
     "import time\n",
@@ -73,6 +68,72 @@
      "text": [
       "pyvisa-py: ('ASRL/dev/ttyS4::INSTR',)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n"
+     ]
     }
    ],
    "source": [
@@ -96,9 +157,75 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1478d275d9c644049b969e3420b2bdfe",
+       "model_id": "a08a33811a2a4f428c9e10dc92fe10f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +287,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a5bc8e820fc4071b9cf75e93d1e9295",
+       "model_id": "9165fa15a44a49a0b84361b83324add7",
        "version_major": 2,
        "version_minor": 0
       },
