added some useful support info

--- a/Initialization_Guide.ipynb
+++ b/Initialization_Guide.ipynb
@@ -25,14 +25,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikolai/miniconda3/envs/qcodes/lib/python3.9/site-packages/gpib_ctypes/gpib/gpib.py:54: UserWarning: GPIB library not found. Please manually load it using _load_lib(filename). All GPIB functions will raise OSError until the library is manually loaded.\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -72,6 +64,72 @@
      "output_type": "stream",
      "text": [
       "pyvisa-py: ('ASRL/dev/ttyS4::INSTR',)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n",
+      "libgpib: invalid descriptor\n"
      ]
     }
    ],
