Updated the docs

--- a/NI_PCI_GPIB/leds_sweep_+-30mA.ipynb
+++ b/NI_PCI_GPIB/leds_sweep_+-30mA.ipynb
@@ -21,9 +21,28 @@
     "import time\n",
     "import qcodes as qc\n",
     "import pyvisa as visa\n",
-    "import ipywidgets as widgets\n",
+    "import matplotlib.pyplot as plt\n",
     "# enable to get a more debuggable output:\n",
-    "#visa.log_to_screen()\n",
+    "# visa.log_to_screen()\n",
+    "\n",
+    "# import qcodes dataset modules and utilities\n",
+    "from qcodes.dataset import (\n",
+    "    Measurement,\n",
+    "    experiments,\n",
+    "    initialise_or_create_database_at,\n",
+    "    load_by_run_spec,\n",
+    "    load_or_create_experiment,\n",
+    ")\n",
+    "\n",
+    "# multidimensional scanning module\n",
+    "from qcodes.utils.dataset.doNd import (\n",
+    "    dond, \n",
+    "    LinSweep, \n",
+    "    LogSweep\n",
+    ")\n",
+    "\n",
+    "# integrated plotting module\n",
+    "from qcodes.dataset.plotting import plot_dataset\n",
     "\n",
     "# importing the instrument driver packages: \n",
     "from qcodes.instrument_drivers.yokogawa.GS200 import GS200\n",
@@ -137,6 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define a station called `station`\n",
     "station = qc.Station()"
    ]
   },
@@ -165,129 +185,20 @@
     }
    ],
    "source": [
+    "# add both instruments to said station\n",
     "station.add_component(gs)\n",
     "station.add_component(keith)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c40a3961-ef77-4e6b-b4e0-c653f0a90e46",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "keithley2400:\n",
-      "\tparameter  value\n",
-      "--------------------------------------------------------------------------------\n",
-      "IDN         :\t{'vendor': 'KEITHLEY INSTRUMENTS INC.', 'model': '2400', 'seria...\n",
-      "compliancei :\t1e-06 \n",
-      "compliancev :\t21 \n",
-      "curr        :\t-9.3408e-08 (A)\n",
-      "mode        :\tVOLT \n",
-      "nplci       :\t1 \n",
-      "nplcv       :\t1 \n",
-      "output      :\tTrue \n",
-      "rangei      :\t0.000105 \n",
-      "rangev      :\t210 \n",
-      "resistance  :\t73776 (Ohm)\n",
-      "sense       :\t\"VOLT:DC\",\"CURR:DC\" \n",
-      "timeout     :\t10 (s)\n",
-      "volt        :\t-0.0087146 (V)\n"
-     ]
-    }
-   ],
-   "source": [
-    "keith.print_readable_snapshot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b8dbf798-e58d-46bc-9f48-2974765235a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gs200:\n",
-      "\tparameter    value\n",
-      "--------------------------------------------------------------------------------\n",
-      "BNC_in        :\tTRIG \n",
-      "BNC_out       :\tTRIG \n",
-      "IDN           :\t{'vendor': 'YOKOGAWA', 'model': 'GS210', 'serial': '91LA25023...\n",
-      "auto_range    :\tFalse \n",
-      "current       :\t0 (I)\n",
-      "current_limit :\t0.2 (I)\n",
-      "current_range :\t0.001 (I)\n",
-      "four_wire     :\toff \n",
-      "guard         :\toff \n",
-      "line_freq     :\t60 (Hz)\n",
-      "output        :\ton \n",
-      "output_level  :\t0 (I)\n",
-      "range         :\t0.001 (I)\n",
-      "source_mode   :\tCURR \n",
-      "system_errors :\t-113,\"Undefined header, TRIG\" \n",
-      "timeout       :\t10 (s)\n",
-      "voltage_limit :\t30 (V)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "max() arg is an empty sequence",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_readable_snapshot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/qcodes/instrument/base.py:336\u001b[0m, in \u001b[0;36mInstrumentBase.print_readable_snapshot\u001b[0;34m(self, update, max_chars)\u001b[0m\n\u001b[1;32m    333\u001b[0m     \u001b[38;5;28mprint\u001b[39m(msg)\n\u001b[1;32m    335\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m submodule \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msubmodules\u001b[38;5;241m.\u001b[39mvalues():\n\u001b[0;32m--> 336\u001b[0m     \u001b[43msubmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_readable_snapshot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mupdate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    337\u001b[0m \u001b[43m                                      \u001b[49m\u001b[43mmax_chars\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmax_chars\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/qcodes/instrument/base.py:305\u001b[0m, in \u001b[0;36mInstrumentBase.print_readable_snapshot\u001b[0;34m(self, update, max_chars)\u001b[0m\n\u001b[1;32m    301\u001b[0m par_lengths \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlen\u001b[39m(p) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m snapshot[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparameters\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m    303\u001b[0m \u001b[38;5;66;03m# Min of 50 is to prevent a super long parameter name to break this\u001b[39;00m\n\u001b[1;32m    304\u001b[0m \u001b[38;5;66;03m# function\u001b[39;00m\n\u001b[0;32m--> 305\u001b[0m par_field_len \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpar_lengths\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m    307\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    308\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m0:<\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m}\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mparameter \u001b[39m\u001b[38;5;124m'\u001b[39m, par_field_len) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
-     ]
-    }
-   ],
-   "source": [
-    "gs.print_readable_snapshot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bfede977-2aea-4023-980c-75b67443a015",
+   "execution_count": null,
+   "id": "d4fea2a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import qcodes as qc\n",
-    "from qcodes.dataset import (\n",
-    "    Measurement,\n",
-    "    experiments,\n",
-    "    initialise_or_create_database_at,\n",
-    "    load_by_run_spec,\n",
-    "    load_or_create_experiment,\n",
-    ")\n",
-    "\n",
-    "## Dummy instruments for generating synthetic data\n",
-    "from qcodes.tests.instrument_mocks import (\n",
-    "    DummyInstrument, \n",
-    "    DummyInstrumentWithMeasurement\n",
-    ")\n",
-    "\n",
-    "## Multidimensional scanning module\n",
-    "from qcodes.utils.dataset.doNd import (\n",
-    "    dond, \n",
-    "    LinSweep, \n",
-    "    LogSweep\n",
-    ")\n",
-    "\n",
-    "## Integrated plotting module\n",
-    "from qcodes.dataset.plotting import plot_dataset\n",
-    "\n",
-    "## Using interactive widget\n",
-    "from qcodes.interactive_widget import experiments_widget"
+    "# reset the yokogama gs 210 to remove and previous defaults\n",
+    "gs.reset()"
    ]
   },
   {
@@ -297,10 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs.reset()\n",
+    "# set the mode to output current\n",
     "gs.source_mode('CURR')\n",
+    "\n",
+    "# set current to zero\n",
     "gs.current(0)\n",
+    "\n",
+    "# let the ranges of the voltage be in an automatic range\n",
     "gs.auto_range(True)\n",
+    "\n",
+    "# have it actually output some current \n",
     "gs.output('on')"
    ]
   },
@@ -311,6 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reset the keithley 2400 to remove any previous defaults\n",
     "keith.reset()"
    ]
   },
@@ -327,9 +245,7 @@
     "keith._set_mode_and_sense('VOLT')\n",
     "keith.compliancei(1e-06)\n",
     "keith.rangev(30)\n",
-    "#keith.sense()\n",
-    "keith.output(1)\n",
-    "# resetting the instrument"
+    "keith.output(1)"
    ]
   },
   {
@@ -399,14 +315,6 @@
     "# Setting up a doNd measurement\n",
     "sweep_1 = LinSweep(gs.current, -0.03, 0.03, 600, 0.01)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8394ad20-1740-45e8-a989-e5b5284f02fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -653,16 +561,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a72ce5cd-ad76-44f6-b5c2-30538691b26c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "id": "da314d5c-7043-472c-a45a-a48e2f34b4ab",
    "metadata": {},
@@ -711,26 +609,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gs.reset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35eb16f-7238-49cd-b987-53293efafebf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# reset both instruments to their original defaults\n",
+    "gs.reset()\n",
     "keith.reset()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c3ea82a-05f1-4e32-a1a2-b8b283f6b64c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
